--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 </head>
 <body>
 
-<script id="f" type="x/f">precision mediump float;
+<script id="f" type="x/f">
+precision mediump float;
 uniform float t; // time
 uniform vec2  r; // resolution
 
 void main(void){
-    gl_FragColor = vec4(0.0, 1.0, 0.0, 1.0);
+    float a = gl_FragCoord.x / 1024.0;
+    gl_FragColor = vec4(vec3(a), 1.0);
 }
 
 </script>
