--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ uniform float t; // time
 uniform vec2  r; // resolution
 
 void main(void){
-    float a = gl_FragCoord.x / 1024.0;
-    gl_FragColor = vec4(vec3(a), 1.0);
+    float a = gl_FragCoord.x / r.x;
+    gl_FragColor = vec4(vec3(a, a, a), 1.0);
 }
 
 </script>
