--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@ uniform float t; // time
 uniform vec2  r; // resolution
 
 void main(void){
-    float r = abs(sin(t)); // *1
-    float g = abs(cos(t));
-    float b = (r + g) / 2.0; // *2
-    gl_FragColor = vec4(r, g, b, 1.0);
+    vec2 p = (gl_FragCoord.xy * 2.0 - r) / min(r.x, r.y); // 正規化
+    float l = 0.1 / length(p);
+    gl_FragColor = vec4(vec3(l), 1.0);
 }
-
 </script>
 
 <script src="script.js"></script>
