--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@ uniform vec2  r; // resolution
 
 void main(void){
     vec2 p = (gl_FragCoord.xy * 2.0 - r) / min(r.x, r.y);
+    p += vec2(cos(t), sin(t)) * 0.5;
     float l = 0.1 / length(p);
     gl_FragColor = vec4(vec3(l), 1.0);
 }
 </script>
 
 <script src="script.js"></script>
-<canvas id="c"></canvas>
+<canvas id="canvas-viewport"></canvas>
 </body>
 </html>
