update: shader type

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<script id="f" type="x/f">
+<script id="f" type="x-shader/x-fragment">
 precision mediump float;
 uniform float t; // time
 uniform vec2  r; // resolution
