update: circle size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ uniform vec2  r; // resolution
 void main(void){
     vec2 p = (gl_FragCoord.xy * 2.0 - r) / min(r.x, r.y);
     float len = length(p);
-    float f = 0.01 / abs(len - 0.5);
+    float f = (sin(t) + 1.0) * 0.01 / abs(len - 0.5);
     gl_FragColor = vec4(vec3(f), 1.0);
 }
 </script>
