--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@ uniform vec2  r; // resolution
 
 void main(void){
     vec2 p = (gl_FragCoord.xy * 2.0 - r) / min(r.x, r.y);
-    float len = length(p);
-    float f = (sin(t) + 1.0) * 0.01 / abs(len - 0.5);
-    gl_FragColor = vec4(vec3(f), 1.0);
+    vec3 destColor = vec3(1.0, 0.3, 0.7);
+    float f = 0.0;
+    for(float i = 0.0; i < 10.0; i++){
+        float s = sin(t + i * 0.628318) * 0.5;
+        float c = cos(t + i * 0.628318) * 0.5;
+        f += 0.0025 / abs(length(p + vec2(c, s)) - 0.5);
+    }
+    gl_FragColor = vec4(vec3(destColor * f), 1.0);
 }
 </script>
 
